# DataSiteAI

./: .gitignore  BRADY_PROMPT.md  README.md  package-lock.json  package.json  stately-avatar-471704-v0-da4c5b7a1471.json
backend/: CLAUDE.md  Dockerfile  README.md  alembic.ini  cloudbuild.yaml  docker-compose.yml  index.ts  listing_scraper.py  package-lock.json  package.json  pyproject.toml  requirements.txt  scoringjson.txt
backend/app/: config.py  dependencies.py  main.py
backend/app/api/v1/: analyze.py  health.py  layers.py  listings.py  router.py  scores.py  scoring_schema.py
backend/app/chatbot/: agent.py  router.py  schemas.py
backend/app/core/: grid.py
backend/app/core/layers/: base.py  climate_layer.py  connectivity_layer.py  economic_layer.py  environmental_layer.py  geological_layer.py  optimal_layer.py  power_layer.py  water_layer.py
backend/app/core/listings/: county_parcel_fetcher.py  landwatch_scraper.py  listing_service.py
backend/app/core/scoring/: base.py  (+9 more)
backend/app/db/: models.py  session.py
backend/app/integrations/: base.py  census.py  eia.py  epa.py  fema.py  gee.py  nasa_power.py  noaa.py  osm.py  usgs.py
backend/app/models/: domain.py  requests.py  responses.py
backend/docs/: FRONTEND_INTEGRATION.md  SCORING_INTERNALS.md
backend/jobs/: ingest_economic.py  ingest_gee.py  ingest_listings.py  ingest_osm.py
backend/mock_data/: location_response.json
backend/tests/: conftest.py
backend/tests/test_api/: test_analyze.py
backend/tests/test_layers/: test_layer_builders.py
backend/tests/test_scoring/: test_engine.py
(+22 files in other folders)
